# timetable-gen

./: .clang-format  CMakeLists.txt
scripts/linux/: build.sh  clean.sh
scripts/windows/: build.bat  clean.bat
src/: main.cpp  timetable.cpp  timetable.hpp
